--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@ button:hover {
 <body>
     <div class="container">
         <h1>Implementasi Model Single Layer Perceptron untuk Klasifikasi Status Gejala Diabetes</h1>
-        <form id="prediction-form">
+        <form id="prediction-form" method="POST">
             <input type="number" name="Pregnancies" placeholder="Jumlah Kehamilan (Pregnancies)" step="any" required>
             <input type="number" name="Glucose" placeholder="Glukosa (Glucose)" step="any" required>
             <input type="number" name="BloodPressure" placeholder="Tekanan Darah (Blood Pressure)" step="any" required>
